[package]
name = "tezos-node-bootstrap"
version = "0.1.0"
authors = ["Adrian Nagy <adrian.nagy@simplestaking.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.0-alpha.2", features = ["blocking"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive", "rc"] }
chrono = { version = "0.4.9", features = ["serde"] }