[package]
name = "tezos-node-bootstrap"
version = "0.1.0"
authors = ["Adrian Nagy <adrian.nagy@viablesystems.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
reqwest = { version = "0.10.0-alpha.2", features = ["blocking"] }
serde_json = "1.0"
getset = "0.0.9"
serde = { version = "1.0", features = ["derive", "rc"] }
chrono = { version = "0.4.9", features = ["serde"] }
failure = "0.1"
assert-json-diff = "1.0.0"
itertools = "0.9.0"
url = "2.2"